src/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>ApiReleaseNumber__c</fullName>
        <description>The release number for the org&apos;s instance - determined by making a callout to status.salesforce.com</description>
        <inlineHelpText>The release number for the org&apos;s instance - determined by making a callout to status.salesforce.com</inlineHelpText>
        <label>API Release Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiReleaseVersion__c</fullName>
        <description>The release version for the org&apos;s instance - determined by making a callout to status.salesforce.com</description>
        <inlineHelpText>The release version for the org&apos;s instance - determined by making a callout to status.salesforce.com</inlineHelpText>
        <label>API Release Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiVersion__c</fullName>
        <description>The Salesforce release (API version) of the environment</description>
        <inlineHelpText>The Salesforce release (API version) of the environment</inlineHelpText>
        <label>API Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v53.0</fullName>
                    <label>v53.0 - Winter &apos;22 Release</label>
                </value>
                <value>
                    <fullName>v52.0</fullName>
                    <label>v52.0 - Summer &apos;21 Release</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClosedLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <summarizedField>LogEntry__c.Timestamp__c</summarizedField>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code Issue</fullName>
                </value>
                <value>
                    <fullName>Config Issue</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Integration Issue</fullName>
                </value>
                <value>
                    <fullName>No Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogEntriesSummary__c</fullName>
        <formula>TEXT(TotalLogEntries__c) + &apos; total entries&apos;
+ IF(
    TotalERRORLogEntries__c = 0,
    &apos;&apos;,
    &apos;, &apos; + TEXT(TotalERRORLogEntries__c) + &apos; error(s)&apos;
)
+ IF(
    TotalWARNLogEntries__c = 0,
    &apos;&apos;,
    &apos;, &apos; + TEXT(TotalWARNLogEntries__c) + &apos; warning(s)&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogRetentionDate__c</fullName>
        <description>The date that this log can be automatically deleted by the batch job LogBatchPurger.

It defaults to 2 weeks after creation (configurable in Logger Settings), but the date can be set manually or via automation if certain logs need to be kept longer/indefinitely.</description>
        <inlineHelpText>The date that this log can be automatically deleted by the batch job LogBatchPurger.</inlineHelpText>
        <label>Log Retention Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoggedByUsernameLink__c</fullName>
        <formula>IF(
    ISBLANK(LoggedBy__c),
    &apos;Anonymous&apos;,
    HYPERLINK(
        LoggedBy__c,
        IF(
            ISPICKVAL(UserType__c, &apos;AutomatedProcess&apos;),
            TRIM(LoggedBy__r.FirstName + &apos; &apos; + LoggedBy__r.LastName),
            LoggedByUsername__c
        ),
        &apos;_top&apos;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedByUsername__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoginApplication__c</fullName>
        <label>Login Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginBrowser__c</fullName>
        <label>Login Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginDomain__c</fullName>
        <label>DEPRECATED: Login Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LoginHistoryId__c</fullName>
        <label>Login History ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginPlatform__c</fullName>
        <label>Login Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginType__c</fullName>
        <label>Login Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Remote Access 2.0</fullName>
                </value>
                <value>
                    <fullName>SAML Idp Initiated SSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LogoutUrl__c</fullName>
        <label>Logout URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MaxLogEntryLoggingLevelOrdinal__c</fullName>
        <description>The highest logging level ordinal of any related log entries</description>
        <inlineHelpText>The highest logging level ordinal of any related log entries</inlineHelpText>
        <label>Max Log Entry Logging Level Ordinal</label>
        <summarizedField>LogEntry__c.LoggingLevelOrdinal__c</summarizedField>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NetworkId__c</fullName>
        <description>The Network ID of the Community user&apos;s site. Set with Network.getNetworkId()</description>
        <externalId>true</externalId>
        <inlineHelpText>The Network ID of the user&apos;s Community site.</inlineHelpText>
        <label>Site Network ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkLoginUrl__c</fullName>
        <label>Site Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NetworkLogoutUrl__c</fullName>
        <label>Site Logout URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NetworkName__c</fullName>
        <description>The name of the user&apos;s Community site (based on NetworkId).</description>
        <inlineHelpText>The name of the user&apos;s Community site (based on NetworkId).</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkSelfRegistrationUrl__c</fullName>
        <label>Site Self Registration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NetworkUrlPathPrefix__c</fullName>
        <description>The UrlPathPrefix is a unique string at the end of the URL for this community. For example, in the community URL CommunitiesSubdomainName.force.com/customers, customers is the UrlPathPrefix.</description>
        <inlineHelpText>The UrlPathPrefix is a unique string at the end of the URL for this community. For example, in the community URL CommunitiesSubdomainName.force.com/customers, customers is the UrlPathPrefix.</inlineHelpText>
        <label>Site URL Path Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationDomainUrl__c</fullName>
        <description>The value returned from Url..getOrgDomainUrl()</description>
        <inlineHelpText>The value returned from Url..getOrgDomainUrl()</inlineHelpText>
        <label>Organization Domain URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OrganizationEnvironmentType__c</fullName>
        <label>Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Scratch Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationInstanceName__c</fullName>
        <label>Instance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationInstanceReleaseCycle__c</fullName>
        <label>Instance Release Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preview Instance</fullName>
                </value>
                <value>
                    <fullName>Non-Preview Instance</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationNamespacePrefix__c</fullName>
        <label>Organization Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Edition</fullName>
                </value>
                <value>
                    <fullName>Professional Edition</fullName>
                </value>
                <value>
                    <fullName>Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Developer Edition</fullName>
                </value>
                <value>
                    <fullName>Personal Edition</fullName>
                </value>
                <value>
                    <fullName>Unlimited Edition</fullName>
                </value>
                <value>
                    <fullName>Contact Manager Edition</fullName>
                </value>
                <value>
                    <fullName>Base Edition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The log from the original transaction that initiated a child log - for example, batch jobs have start, execute and finish methods. All 3 are considered separate transactions. By using the parent log, logs from all 3 transactions can be linked together.</description>
        <inlineHelpText>The log from the original transaction that initiated a child log - for example, batch jobs have start, execute and finish methods. All 3 are considered separate transactions. By using the parent log, logs from all 3 transactions can be linked together.</inlineHelpText>
        <label>Parent Log</label>
        <referenceTo>Log__c</referenceTo>
        <relationshipLabel>Related Logs</relationshipLabel>
        <relationshipName>ChildLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#FF6666</color>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <color>#FFCC66</color>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#66FF99</color>
                    <default>true</default>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>Profile ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + ProfileId__c, ProfileName__c, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>Session ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionSecurityLevel__c</fullName>
        <label>Session Security Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>STANDARD</fullName>
                </value>
                <value>
                    <fullName>HIGH_ASSURANCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SessionType__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aura</fullName>
                </value>
                <value>
                    <fullName>Oauth2</fullName>
                </value>
                <value>
                    <fullName>UI</fullName>
                </value>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceIp__c</fullName>
        <label>Source IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <summarizedField>LogEntry__c.Timestamp__c</summarizedField>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ignored</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModeSummary__c</fullName>
        <formula>&apos;API.&apos; +  TEXT(ApiVersion__c) + &apos;.&apos; + TEXT(SystemMode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemMode__c</fullName>
        <label>System Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANONYMOUS</fullName>
                </value>
                <value>
                    <fullName>AURA</fullName>
                </value>
                <value>
                    <fullName>BATCH_ACS</fullName>
                </value>
                <value>
                    <fullName>BATCH_APEX</fullName>
                </value>
                <value>
                    <fullName>BATCH_CHUNK_PARALLEL</fullName>
                </value>
                <value>
                    <fullName>BATCH_CHUNK_SERIAL</fullName>
                </value>
                <value>
                    <fullName>BULK_API</fullName>
                </value>
                <value>
                    <fullName>COMMERCE_INTEGRATION</fullName>
                </value>
                <value>
                    <fullName>DISCOVERABLE_LOGIN</fullName>
                </value>
                <value>
                    <fullName>FUNCTION_CALLBACK</fullName>
                </value>
                <value>
                    <fullName>FUTURE</fullName>
                </value>
                <value>
                    <fullName>INBOUND_EMAIL_SERVIC</fullName>
                </value>
                <value>
                    <fullName>INVOCABLE_ACTION</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>QUEUEABLE</fullName>
                </value>
                <value>
                    <fullName>QUICK_ACTION</fullName>
                </value>
                <value>
                    <fullName>REMOTE_ACTION</fullName>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_ASYNC</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_DEPLOY</fullName>
                </value>
                <value>
                    <fullName>RUNTEST_SYNC</fullName>
                </value>
                <value>
                    <fullName>SCHEDULED</fullName>
                </value>
                <value>
                    <fullName>SOAP</fullName>
                </value>
                <value>
                    <fullName>SYNCHRONOUS</fullName>
                </value>
                <value>
                    <fullName>TRANSACTION_FINALIZE</fullName>
                </value>
                <value>
                    <fullName>VF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThemeDisplayed__c</fullName>
        <label>Theme Displayed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Theme1</fullName>
                    <label>Obsolete Salesforce Theme</label>
                </value>
                <value>
                    <fullName>Theme2</fullName>
                    <label>Salesforce Classic 2005</label>
                </value>
                <value>
                    <fullName>Theme3</fullName>
                    <label>Salesforce Classic</label>
                </value>
                <value>
                    <fullName>Theme4d</fullName>
                    <label>Lightning Experience</label>
                </value>
                <value>
                    <fullName>Theme4t</fullName>
                    <label>Salesforce Mobile App</label>
                </value>
                <value>
                    <fullName>Theme4u</fullName>
                    <label>Lightning Console</label>
                </value>
                <value>
                    <fullName>PortalDefault</fullName>
                    <label>Customer Portal</label>
                </value>
                <value>
                    <fullName>Webstore</fullName>
                    <label>AppExchange</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeZoneId__c</fullName>
        <label>Time Zone ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZoneName__c</fullName>
        <label>Time Zone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalDEBUGLogEntries__c</fullName>
        <description>The total number of log entries with logging level == &apos;DEBUG&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;DEBUG&apos;</inlineHelpText>
        <label>Total DEBUG Entries</label>
        <summaryFilterItems>
            <field>LogEntry__c.LoggingLevel__c</field>
            <operation>equals</operation>
            <value>DEBUG</value>
        </summaryFilterItems>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalERRORLogEntries__c</fullName>
        <description>The total number of log entries with logging level == &apos;ERROR&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;ERROR&apos;</inlineHelpText>
        <label>Total ERROR Entries</label>
        <summaryFilterItems>
            <field>LogEntry__c.LoggingLevel__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </summaryFilterItems>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFINELogEntries__c</fullName>
        <description>The total number of log entries with logging level == &apos;FINE&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;FINE&apos;</inlineHelpText>
        <label>Total FINE Entries</label>
        <summaryFilterItems>
            <field>LogEntry__c.LoggingLevel__c</field>
            <operation>equals</operation>
            <value>FINE</value>
        </summaryFilterItems>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFINERLogEntries__c</fullName>
        <description>The total number of log entries with logging level == &apos;FINER&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;FINER&apos;</inlineHelpText>
        <label>Total FINER Entries</label>
        <summaryFilterItems>
            <field>LogEntry__c.LoggingLevel__c</field>
            <operation>equals</operation>
            <value>FINER</value>
        </summaryFilterItems>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFINESTLogEntries__c</fullName>
        <description>The total number of log entries with logging level == &apos;FINEST&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;FINEST&apos;</inlineHelpText>
        <label>Total FINEST Entries</label>
        <summaryFilterItems>
            <field>LogEntry__c.LoggingLevel__c</field>
            <operation>equals</operation>
            <value>FINEST</value>
        </summaryFilterItems>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalINFOLogEntries__c</fullName>
        <description>The total number of log entries with logging level == &apos;INFO&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;INFO&apos;</inlineHelpText>
        <label>Total INFO Entries</label>
        <summaryFilterItems>
            <field>LogEntry__c.LoggingLevel__c</field>
            <operation>equals</operation>
            <value>INFO</value>
        </summaryFilterItems>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLimitsCpuTimeUsed__c</fullName>
        <label>Total CPU</label>
        <summarizedField>LogEntry__c.LimitsCpuTimeUsed__c</summarizedField>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLogEntries__c</fullName>
        <formula>TotalERRORLogEntries__c
+ TotalWARNLogEntries__c
+ TotalINFOLogEntries__c
+ TotalDEBUGLogEntries__c
+ TotalFINELogEntries__c
+ TotalFINERLogEntries__c
+ TotalFINESTLogEntries__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Entries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalWARNLogEntries__c</fullName>
        <description>The total number of log entries with logging level == &apos;WARN&apos;</description>
        <inlineHelpText>The total number of log entries with logging level == &apos;WARN&apos;</inlineHelpText>
        <label>Total WARN Entries</label>
        <summaryFilterItems>
            <field>LogEntry__c.LoggingLevel__c</field>
            <operation>equals</operation>
            <value>WARN</value>
        </summaryFilterItems>
        <summaryForeignKey>LogEntry__c.Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserLicenseDefinitionKey__c</fullName>
        <description>https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_userlicense.htm</description>
        <label>User License Definition Key</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUL</fullName>
                </value>
                <value>
                    <fullName>AUL_LIGHT</fullName>
                </value>
                <value>
                    <fullName>AUL1</fullName>
                </value>
                <value>
                    <fullName>FDC_ONE</fullName>
                </value>
                <value>
                    <fullName>FDC_SUB</fullName>
                </value>
                <value>
                    <fullName>Overage_Platform_Portal_User</fullName>
                </value>
                <value>
                    <fullName>PID_CHATTER</fullName>
                </value>
                <value>
                    <fullName>PID_CONTENT</fullName>
                </value>
                <value>
                    <fullName>PID_Customer_Community</fullName>
                </value>
                <value>
                    <fullName>PID_Customer_Community_Login</fullName>
                </value>
                <value>
                    <fullName>PID_Customer_Portal_Basic</fullName>
                </value>
                <value>
                    <fullName>PID_Customer_Portal_Standard</fullName>
                </value>
                <value>
                    <fullName>PID_FDC_FREE</fullName>
                </value>
                <value>
                    <fullName>PID_IDEAS</fullName>
                </value>
                <value>
                    <fullName>PID_Ideas_Only_Portal</fullName>
                </value>
                <value>
                    <fullName>PID_Ideas_Only_Site</fullName>
                </value>
                <value>
                    <fullName>PID_KNOWLEDGE</fullName>
                </value>
                <value>
                    <fullName>PID_Limited_Customer_Portal_Basic</fullName>
                </value>
                <value>
                    <fullName>PID_Limited_Customer_Portal_Standard</fullName>
                </value>
                <value>
                    <fullName>PID_Overage_Customer_Portal_Basic</fullName>
                </value>
                <value>
                    <fullName>PID_Overage_High</fullName>
                </value>
                <value>
                    <fullName>PID_Partner_Community</fullName>
                </value>
                <value>
                    <fullName>PID_Partner_Community_Login</fullName>
                </value>
                <value>
                    <fullName>PID_STRATEGIC_PRM</fullName>
                </value>
                <value>
                    <fullName>Platform_Portal_User</fullName>
                </value>
                <value>
                    <fullName>POWER_PRM</fullName>
                </value>
                <value>
                    <fullName>POWER_SSP</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserLicenseId__c</fullName>
        <label>User License ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLicenseName__c</fullName>
        <label>User License Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics Cloud Integration User</fullName>
                </value>
                <value>
                    <fullName>Authenticated Website</fullName>
                </value>
                <value>
                    <fullName>Chatter External</fullName>
                </value>
                <value>
                    <fullName>Chatter Free</fullName>
                </value>
                <value>
                    <fullName>Cloud Integration User</fullName>
                </value>
                <value>
                    <fullName>Customer Community</fullName>
                </value>
                <value>
                    <fullName>Customer Community Login</fullName>
                </value>
                <value>
                    <fullName>Customer Community Plus</fullName>
                </value>
                <value>
                    <fullName>Customer Community Plus Login</fullName>
                </value>
                <value>
                    <fullName>Customer Portal Manager Custom</fullName>
                </value>
                <value>
                    <fullName>Customer Portal Manager Standard</fullName>
                </value>
                <value>
                    <fullName>External Identity</fullName>
                </value>
                <value>
                    <fullName>Force.com - App Subscription</fullName>
                </value>
                <value>
                    <fullName>Force.com - Free</fullName>
                </value>
                <value>
                    <fullName>Gold Partner</fullName>
                </value>
                <value>
                    <fullName>High Volume Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Partner App Subscription</fullName>
                </value>
                <value>
                    <fullName>Partner Community</fullName>
                </value>
                <value>
                    <fullName>Partner Community Login</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Salesforce Platform</fullName>
                </value>
                <value>
                    <fullName>Silver Partner</fullName>
                </value>
                <value>
                    <fullName>Work.com Only</fullName>
                </value>
                <value>
                    <fullName>XOrg Proxy User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>